--- a/META.yml
+++ b/META.yml
@@ -1,10 +1,10 @@
 --- #YAML:1.0
 name:               Music-Chord-Positions
-version:            0.03
+version:            0.04
 abstract:           generate various chord inversions and voicings
 author:
     - Jeremy Mates <jmates@cpan.org>
-license:            unknown
+license:            perl
 distribution_type:  module
 configure_requires:
     ExtUtils::MakeMaker:  0
