--- a/META.yml
+++ b/META.yml
@@ -1,26 +1,26 @@
---- #YAML:1.0
-name:               Music-Chord-Positions
-version:            0.06
-abstract:           generate various chord inversions and voicings
+---
+abstract: 'generate various chord inversions and voicings'
 author:
-    - Jeremy Mates <jmates@cpan.org>
-license:            perl
-distribution_type:  module
-configure_requires:
-    ExtUtils::MakeMaker:  0
+  - 'Jeremy Mates <jmates@cpan.org>'
 build_requires:
-    ExtUtils::MakeMaker:  0
-requires:
-    Carp:                0
-    List::MoreUtils:     0
-    List::Util:          0
-    Music::Chord::Note:  0
-    Test::More:          0
-no_index:
-    directory:
-        - t
-        - inc
-generated_by:       ExtUtils::MakeMaker version 6.54
+  ExtUtils::MakeMaker: 0
+configure_requires:
+  ExtUtils::MakeMaker: 0
+dynamic_config: 1
+generated_by: 'ExtUtils::MakeMaker version 6.62, CPAN::Meta::Converter version 2.112150'
+license: perl
 meta-spec:
-    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
-    version:  1.4
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
+name: Music-Chord-Positions
+no_index:
+  directory:
+    - t
+    - inc
+requires:
+  Carp: 0
+  List::MoreUtils: 0
+  List::Util: 0
+  Music::Chord::Note: 0
+  Test::More: 0
+version: 0.08
