--- a/META.yml
+++ b/META.yml
@@ -7,7 +7,7 @@ build_requires:
 configure_requires:
   ExtUtils::MakeMaker: 0
 dynamic_config: 1
-generated_by: 'ExtUtils::MakeMaker version 6.62, CPAN::Meta::Converter version 2.112150'
+generated_by: 'ExtUtils::MakeMaker version 6.64, CPAN::Meta::Converter version 2.120921'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -23,4 +23,8 @@ requires:
   List::Util: 0
   Music::Chord::Note: 0
   Test::More: 0
-version: 0.52
+resources:
+  homepage: http://github.com/thrig/Music-Chord-Positions
+  license: http://dev.perl.org/licenses/
+  repository: http://github.com/thrig/Music-Chord-Positions
+version: 0.55
